--- a/transaction_analysis.ipynb
+++ b/transaction_analysis.ipynb
@@ -8,7 +8,7 @@
     "name": "ipython",
     "version": 3
    },
-   "version": "3.7.4"
+   "version": "3.6.8-final"
   },
   "orig_nbformat": 2,
   "file_extension": ".py",
@@ -16,12 +16,16 @@
   "name": "python",
   "npconvert_exporter": "python",
   "pygments_lexer": "ipython3",
-  "version": 3
+  "version": 3,
+  "kernelspec": {
+   "name": "python36864bita81e1d93cb0848a1ac7425e3fba66434",
+   "display_name": "Python 3.6.8 64-bit"
+  }
  },
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -41,25 +45,25 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "TRANSACTIONS_FILEPATH = \"~/Documents/abhijeet-transactions.csv\""
+    "TRANSACTIONS_FILEPATH = \"/data/transaction-data/transactions-1-19-20.csv\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "1917 Transactions:\n"
+     "text": "1948 Transactions:\n"
     },
     {
      "data": {
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Date</th>\n      <th>Description</th>\n      <th>Original Description</th>\n      <th>Amount</th>\n      <th>Transaction Type</th>\n      <th>Category</th>\n      <th>Account Name</th>\n      <th>Labels</th>\n      <th>Notes</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>0</td>\n      <td>1/02/2020</td>\n      <td>Panera Bread</td>\n      <td>PANERA BREAD #204846</td>\n      <td>27.55</td>\n      <td>debit</td>\n      <td>Fast Food</td>\n      <td>Discover</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <td>1</td>\n      <td>1/03/2020</td>\n      <td>Wealthfront Inc Edi Pymnts</td>\n      <td>Wealthfront Inc Edi Pymnts</td>\n      <td>1000.00</td>\n      <td>debit</td>\n      <td>Auto Insurance</td>\n      <td>Abhijeet</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <td>2</td>\n      <td>1/03/2020</td>\n      <td>Capital One Mobile payment</td>\n      <td>Capital One Mobile Pmt</td>\n      <td>29.66</td>\n      <td>debit</td>\n      <td>Credit Card Payment</td>\n      <td>Abhijeet</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <td>3</td>\n      <td>1/03/2020</td>\n      <td>PayrollDeduction</td>\n      <td>PayrollDeduction</td>\n      <td>233.33</td>\n      <td>credit</td>\n      <td>Investments</td>\n      <td>Guideline's Very Aggressive Portfolio</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <td>4</td>\n      <td>1/03/2020</td>\n      <td>Investment</td>\n      <td>Investment</td>\n      <td>1003.86</td>\n      <td>credit</td>\n      <td>Investments</td>\n      <td>Individual Investment Account</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
-      "text/plain": "        Date                 Description        Original Description   Amount  \\\n0  1/02/2020                Panera Bread        PANERA BREAD #204846    27.55   \n1  1/03/2020  Wealthfront Inc Edi Pymnts  Wealthfront Inc Edi Pymnts  1000.00   \n2  1/03/2020  Capital One Mobile payment      Capital One Mobile Pmt    29.66   \n3  1/03/2020            PayrollDeduction            PayrollDeduction   233.33   \n4  1/03/2020                  Investment                  Investment  1003.86   \n\n  Transaction Type             Category  \\\n0            debit            Fast Food   \n1            debit       Auto Insurance   \n2            debit  Credit Card Payment   \n3           credit          Investments   \n4           credit          Investments   \n\n                            Account Name  Labels  Notes  \n0                               Discover     NaN    NaN  \n1                               Abhijeet     NaN    NaN  \n2                               Abhijeet     NaN    NaN  \n3  Guideline's Very Aggressive Portfolio     NaN    NaN  \n4          Individual Investment Account     NaN    NaN  "
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Date</th>\n      <th>Description</th>\n      <th>Original Description</th>\n      <th>Amount</th>\n      <th>Transaction Type</th>\n      <th>Category</th>\n      <th>Account Name</th>\n      <th>Labels</th>\n      <th>Notes</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1/15/2020</td>\n      <td>Domino Data Lab Direct Dep</td>\n      <td>Domino Data Lab Direct Dep</td>\n      <td>2974.63</td>\n      <td>credit</td>\n      <td>Paycheck</td>\n      <td>Abhijeet</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1/15/2020</td>\n      <td>Hulu</td>\n      <td>HLU*HULU 289346993148</td>\n      <td>11.99</td>\n      <td>debit</td>\n      <td>Movies &amp; DVDs</td>\n      <td>Platinum Mastercard</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1/14/2020</td>\n      <td>Venmo</td>\n      <td>Venmo Payment</td>\n      <td>1.93</td>\n      <td>debit</td>\n      <td>Transfer</td>\n      <td>Abhijeet</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>1/14/2020</td>\n      <td>Venmo</td>\n      <td>Venmo Payment</td>\n      <td>27.41</td>\n      <td>debit</td>\n      <td>Transfer</td>\n      <td>Abhijeet</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1/14/2020</td>\n      <td>Venmo</td>\n      <td>Venmo Payment</td>\n      <td>1.95</td>\n      <td>debit</td>\n      <td>Transfer</td>\n      <td>Abhijeet</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
+      "text/plain": "        Date                 Description        Original Description   Amount  \\\n0  1/15/2020  Domino Data Lab Direct Dep  Domino Data Lab Direct Dep  2974.63   \n1  1/15/2020                        Hulu       HLU*HULU 289346993148    11.99   \n2  1/14/2020                       Venmo               Venmo Payment     1.93   \n3  1/14/2020                       Venmo               Venmo Payment    27.41   \n4  1/14/2020                       Venmo               Venmo Payment     1.95   \n\n  Transaction Type       Category         Account Name  Labels  Notes  \n0           credit       Paycheck             Abhijeet     NaN    NaN  \n1            debit  Movies & DVDs  Platinum Mastercard     NaN    NaN  \n2            debit       Transfer             Abhijeet     NaN    NaN  \n3            debit       Transfer             Abhijeet     NaN    NaN  \n4            debit       Transfer             Abhijeet     NaN    NaN  "
      },
-     "execution_count": 29,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,22 +76,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "642 Transactions:\n"
-    },
-    {
-     "data": {
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Amount</th>\n    </tr>\n    <tr>\n      <th>Category</th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>Transfer</td>\n      <td>79480.97</td>\n    </tr>\n    <tr>\n      <td>Credit Card Payment</td>\n      <td>32877.05</td>\n    </tr>\n    <tr>\n      <td>Income</td>\n      <td>27775.21</td>\n    </tr>\n    <tr>\n      <td>Investments</td>\n      <td>16307.74</td>\n    </tr>\n    <tr>\n      <td>Auto Insurance</td>\n      <td>7847.00</td>\n    </tr>\n    <tr>\n      <td>Buy</td>\n      <td>5301.31</td>\n    </tr>\n    <tr>\n      <td>Shopping</td>\n      <td>5261.95</td>\n    </tr>\n    <tr>\n      <td>Restaurants</td>\n      <td>2909.46</td>\n    </tr>\n    <tr>\n      <td>Air Travel</td>\n      <td>2722.81</td>\n    </tr>\n    <tr>\n      <td>Rental Car &amp; Taxi</td>\n      <td>1027.58</td>\n    </tr>\n    <tr>\n      <td>Groceries</td>\n      <td>573.09</td>\n    </tr>\n    <tr>\n      <td>Alcohol &amp; Bars</td>\n      <td>455.65</td>\n    </tr>\n    <tr>\n      <td>Cash &amp; ATM</td>\n      <td>410.58</td>\n    </tr>\n    <tr>\n      <td>Financial</td>\n      <td>400.00</td>\n    </tr>\n    <tr>\n      <td>Pharmacy</td>\n      <td>355.02</td>\n    </tr>\n    <tr>\n      <td>Tuition</td>\n      <td>294.00</td>\n    </tr>\n    <tr>\n      <td>Coffee Shops</td>\n      <td>240.41</td>\n    </tr>\n    <tr>\n      <td>Fast Food</td>\n      <td>223.04</td>\n    </tr>\n    <tr>\n      <td>Charity</td>\n      <td>209.00</td>\n    </tr>\n    <tr>\n      <td>Hotel</td>\n      <td>206.42</td>\n    </tr>\n    <tr>\n      <td>Education</td>\n      <td>200.00</td>\n    </tr>\n    <tr>\n      <td>Hair</td>\n      <td>186.05</td>\n    </tr>\n    <tr>\n      <td>Dividend &amp; Cap Gains</td>\n      <td>176.61</td>\n    </tr>\n    <tr>\n      <td>Gift</td>\n      <td>168.31</td>\n    </tr>\n    <tr>\n      <td>Advertising</td>\n      <td>155.42</td>\n    </tr>\n    <tr>\n      <td>Internet</td>\n      <td>136.30</td>\n    </tr>\n    <tr>\n      <td>Business Services</td>\n      <td>88.14</td>\n    </tr>\n    <tr>\n      <td>Home Improvement</td>\n      <td>86.43</td>\n    </tr>\n    <tr>\n      <td>Movies &amp; DVDs</td>\n      <td>85.13</td>\n    </tr>\n    <tr>\n      <td>Food &amp; Dining</td>\n      <td>83.40</td>\n    </tr>\n    <tr>\n      <td>Entertainment</td>\n      <td>79.53</td>\n    </tr>\n    <tr>\n      <td>Doctor</td>\n      <td>64.17</td>\n    </tr>\n    <tr>\n      <td>Furnishings</td>\n      <td>49.71</td>\n    </tr>\n    <tr>\n      <td>Electronics &amp; Software</td>\n      <td>43.18</td>\n    </tr>\n    <tr>\n      <td>Kids Activities</td>\n      <td>33.50</td>\n    </tr>\n    <tr>\n      <td>Public Transportation</td>\n      <td>30.00</td>\n    </tr>\n    <tr>\n      <td>Gas &amp; Fuel</td>\n      <td>23.46</td>\n    </tr>\n    <tr>\n      <td>Personal Care</td>\n      <td>21.70</td>\n    </tr>\n    <tr>\n      <td>Interest Income</td>\n      <td>19.63</td>\n    </tr>\n    <tr>\n      <td>Auto Payment</td>\n      <td>16.75</td>\n    </tr>\n    <tr>\n      <td>Amusement</td>\n      <td>16.18</td>\n    </tr>\n    <tr>\n      <td>Books</td>\n      <td>15.95</td>\n    </tr>\n    <tr>\n      <td>ATM Fee</td>\n      <td>15.24</td>\n    </tr>\n    <tr>\n      <td>Legal</td>\n      <td>10.00</td>\n    </tr>\n    <tr>\n      <td>Finance Charge</td>\n      <td>6.87</td>\n    </tr>\n    <tr>\n      <td>Shipping</td>\n      <td>1.45</td>\n    </tr>\n    <tr>\n      <td>Service Fee</td>\n      <td>1.11</td>\n    </tr>\n    <tr>\n      <td>Trade Commissions</td>\n      <td>0.71</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
-      "text/plain": "                          Amount\nCategory                        \nTransfer                79480.97\nCredit Card Payment     32877.05\nIncome                  27775.21\nInvestments             16307.74\nAuto Insurance           7847.00\nBuy                      5301.31\nShopping                 5261.95\nRestaurants              2909.46\nAir Travel               2722.81\nRental Car & Taxi        1027.58\nGroceries                 573.09\nAlcohol & Bars            455.65\nCash & ATM                410.58\nFinancial                 400.00\nPharmacy                  355.02\nTuition                   294.00\nCoffee Shops              240.41\nFast Food                 223.04\nCharity                   209.00\nHotel                     206.42\nEducation                 200.00\nHair                      186.05\nDividend & Cap Gains      176.61\nGift                      168.31\nAdvertising               155.42\nInternet                  136.30\nBusiness Services          88.14\nHome Improvement           86.43\nMovies & DVDs              85.13\nFood & Dining              83.40\nEntertainment              79.53\nDoctor                     64.17\nFurnishings                49.71\nElectronics & Software     43.18\nKids Activities            33.50\nPublic Transportation      30.00\nGas & Fuel                 23.46\nPersonal Care              21.70\nInterest Income            19.63\nAuto Payment               16.75\nAmusement                  16.18\nBooks                      15.95\nATM Fee                    15.24\nLegal                      10.00\nFinance Charge              6.87\nShipping                    1.45\nService Fee                 1.11\nTrade Commissions           0.71"
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'date_start' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-11f2d0256648>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     20\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mCATEGORY\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mAMOUNT\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgroupby\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mCATEGORY\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort_values\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mby\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mAMOUNT\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mascending\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m \u001b[0mlast_4_months\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdate_filter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtransactions\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdate_start\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     23\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"{len(last_4_months)} Transactions:\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0mamounts_by_category\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlast_4_months\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'date_start' is not defined"
+     ]
     }
    ],
    "source": [
